# datasus_analysis

./: .gitignore  README.md  app.py  main.py  pyproject.toml
notebooks/: sih.py
notebooks/__marimo__/session/: sih.py.json
