[project]
name = "datasus-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.23.4",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
